WIP
* Copied Java parsing from MavenMojoProjectParser
* SbmMavenProject provides more methods
* Resources used to collect java sources